api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: api
    spec:
      imagePullSecrets:
        - name: github-registry
      containers:
        - image: docker.pkg.github.com/aeisl/container-application-challenge/api:latest
          imagePullPolicy: IfNotPresent
          name: api
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    io.kompose.service: api
  ports:
    - port: 8080
