database.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app.kubernetes.io/name: database
  ports:
    - port: 5432
