database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: database
    spec:
      imagePullSecrets:
        - name: github-registry
      containers:
        - env:
            - name: POSTGRES_DB
              value: secret
            - name: POSTGRES_PASSWORD
              value: bond
            - name: POSTGRES_USER
              value: james
          image: docker.pkg.github.com/aeisl/container-application-challenge/database:latest
          imagePullPolicy: IfNotPresent
          name: database
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    io.kompose.service: database
  ports:
    - port: 5432
