ingress-echo.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  labels:
    app.kubernetes.io/name: echoserver
spec:
  ports:
    - port: $RULES_PORT
      targetPort: 8081
  selector:
    app.kubernetes.io/name: echoserver
