ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_intercept_errors on;
      location @custom_503 {
        return 404 "<html>No service is available on the configured port.</html>";
      }
      error_page 503 @custom_503;
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: challenge
spec:
  tls:
    - hosts:
        - challenge.test
      secretName: challenge-test-tls
  rules:
    - host: challenge.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
